# Learn

./: .ycm_extra_conf.py  README.md
c/: .ycm_extra_conf.py  a.out  char2num.c  whitelist.c  whitelist.h
c_icap-0.4.3/: .ycm_extra_conf.py  Makefile  access.c  aserver.c  autoconf.h  body.c  c-icap  c-icap-config  c-icap-libicapapi-config  c-icap.conf  commands.c  config.status  default_acl.c  header.c  info.c  libicapapi.la  libtool  module.c  mpmt_server.c  request.c  request_common.c  service.c  tags
c_icap_modules-0.4.3/: Makefile.am  Makefile.in  aclocal.m4  autoconf.h  autoconf.h.in  configure  configure.ac
configure/: Makefile  Makefile.in  config.status  configure  configure.in  hello  hello.c
cpp/: .ycm_extra_conf.py
cpp_test/: .ycm_extra_conf.py  a.out  bind.cpp  explicit.cpp  fgets.c  foreach.cc  function.cpp  lambda.cc  mix_sptr_ptr.cpp  move.cpp  mutable.cc  ref.cpp  squid.conf  unique_ptr.cpp
git/: LICENSE  readme.txt
gmime-2.6.20/: Makefile.in  configure  gmime.spec
http-parser/: a.out  mail.txt  parsertrace.c  res3.txt
http-parser-master/: http_parser.c  http_parser.h  struct.c  test.c  test_parser_webmail.c
http_webmail/: 163mail.txt  test_mail.c  webmail_parser.c  webmail_parser.h  wymail.c  wymail_main.c
icap/: Makefile  autoconf.h  c-icap  config.status  libtool
inotify-sample/: .ycm_extra_conf.py  inotify_test.c  inotify_utils.c  tags
modules_icap/: Makefile  config.status  libtool
modules_icap/services/webmail_parser/: Makefile  Makefile.am  Makefile.in
programer/: a.out  test1
python/: README.md  abstest.py  do_for.py  (+3 more)
(+1200 files in other folders)
